# ReserFISI-prototype

./: .gitignore  CMakeLists.txt  README.md  ejemplo.css  index.html  main.cpp
BDG2/: CMakeLists.txt  README.md  main.cpp  package-lock.json  package.json
BDG2/db/: database.sql  db_setup.cpp  db_setup.h
BDG2/email_service/: package-lock.json  package.json
BDG2/src/: App.tsx
BDG2/src/middlewares/: middlewares.h
BDG2/src/routes/: index_routes.cpp  request_routes.h  routes.h  students_routes.cpp  students_routes.h
BDG2/src/routes/controllers/: index_controller.cpp  index_controller.h  request_controller.h  students_controller.h
BDG2/src/services/db_services/: db.cpp  db_operations.cpp  db_utilities.cpp
BDG2/src/services/email_services/: email.h
db/: CMakeLists.txt  data.json  database.sql  db_setup.cpp  db_setup.h
email_service/: server.js
src/: cors_middleware.h  db.cpp  db.h  db_operations.cpp  db_operations.h  index.cpp  json_middleware.h  main.cpp
src/routes/: index_routes.cpp  index_routes.h  request_routes.cpp  request_routes.h  students.routes.h  students_routes.cpp  students_routes.h
src/routes/controllers/: index_controller.cpp  index_controller.h  request_controller.cpp  request_controller.h  students_controller.cpp  students_controller.h
src/services/db_services/: db.cpp  db.h  db_operations.cpp  db_operations.h  db_utilities.cpp  db_utilities.h
src/services/email_services/: email.cpp
src/utils/: config.h
txts/: JSON with DB.txt  JSON with crow.txt  SolicitudesPost.txt  Sql.txt
